2007-09-20  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripComboBox.cs: Manually set the size of this control in the
	constructor, as it doesn't seem to be the same as DefaultSize.
	Fixes a failing monobuild test.

2007-09-19  Jonathan Pobst  <monkey@jpobst.com>

	* DateTimePicker.cs: If the user sets MinDate to DateTime.MinValue,
	change it to DateTimePicker.MinDateTime.  [Fixes bug #326609]

2007-09-19  Jonathan Pobst  <monkey@jpobst.com>

	* Theme.cs: FileDialogs should be using DesktopDirectory instead of
	Desktop.  This lets it work for people who have moved their desktops
	from the default location on windows.  For people who have not, both
	values are the same, so it shouldn't hurt anything.  [Fixes bug #325270]

2007-09-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripControlHostTest.cs: DefaultSize is based off hosted control,
	but when the base constructor sets this, the control is null.  Set it
	again in the constructor.  Fixes a failing monobuild test.

2007-09-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDropDownItem.cs: Make sure Click and DropDownOpened events
	get called.
	* ToolStripSplitButton.cs: Make sure MouseDown and MouseUp events get
	called.

2007-09-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Don't show tooltips for ToolStripTextBoxes, they
	will handle it themselves.
	* ToolStripItem.cs: When deciding what the text of a tooltip should
	be, use the Text property instead of the text field.
	* ToolStripTextBox.cs: Handle tooltips.
	[Fixes bugs #325417 and #325973]

2007-09-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDropDownButton.cs: Only drop down overflow menu with a
	left click.  Fixes the easy part of bug #325969.

2007-09-18  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Set AutoSizeMode back to GrowAndShrink to refix
	bug #325406, but set a minimum for StatusStrip to 22 to keep
	bug #325390 fixed.  I think this minimum would have been figured